build: Fix javadoc to work with Java 14 preview features